# ipyopenlayers

./: .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: update-visual-regression-screenshots.yml
docs/: conf.py  introduction.rst
docs/api_reference/: index.rst
docs/controls/: fullscreen_control.rst  mouseposition_control.rst  scaleline_control.rst
docs/layers/: geojson.rst  geozarr.rst  index.rst  rastertilelayer.rst  vectortilelayer.rst
docs/map/: index.rst
docs/overlay/: image_overlay.rst  index.rst  popup_overlay.rst  video_overlay.rst
examples/: FullScreenControl.ipynb  GeoTIFFTileLayer.ipynb  GeoZarrTileLayer.ipynb  GeojsonLayer.ipynb  HeatmapLayer.ipynb  ImageOverlay.ipynb  MousePositionControl.ipynb  PopupOverlay.ipynb  RasterLayer.ipynb  ScaleLineControl.ipynb  VectorTileLayer.ipynb  VideoOverlay.ipynb  ZoomSliderControl.ipynb  map.ipynb
ipyopenlayers/: __init__.py  _frontend.py  _version.py  openlayers.py
ipyopenlayers/nbextension/: extension.js
ipyopenlayers/tests/: conftest.py  test_example.py  test_nbextension_path.py
src/: geotifflayer.ts  geozarrlayer.ts  widget.ts
src/__tests__/: dom-api.test.js
ui-tests/: jupyter_server_config.py  package.json
ui-tests/tests/: ipyopenlayers.test.ts
ui-tests/tests/notebooks/: FullScreenControl_update.ipynb  GeoTIFFTileLayer_update.ipynb  GeoZarrTileLayer_update.ipynb  GeojsonLayer_update.ipynb  HeatmapLayer_update.ipynb  ImageOverlay_update.ipynb  MousePositionControl_update.ipynb  PopupOverlay_update.ipynb  RasterLayer_update.ipynb  ScaleLineControl_update.ipynb  VideoOverlay_update.ipynb  ZoomSliderControl_update.ipynb
