[build-system]
requires = [
    "hatchling>=1.21.1",
    "jupyterlab>=4.0.0,<5",
    "hatch-nodejs-version>=0.3.2",
]
build-backend = "hatchling.build"

[project]
name = "ipyopenlayers"
description = "OpenLayers Jupyter Widget"
readme = "README.md"
license = { file = "LICENSE.txt" }
requires-python = ">=3.9"
authors = [
    { name = "QuantStack", email = "me@me.com" },
]
keywords = [
    "IPython",
    "Jupyter",
    "Widgets",
]
classifiers = [
    "Framework :: Jupyter",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "ipywidgets>=8.0.0",
    "traitlets",
]
version = "0.2.1"

[dependency-groups]
dev = [
    "pre-commit>=4.3.0",
]

[project.optional-dependencies]
docs = [
    "jupyter_sphinx",
    "nbsphinx",
    "nbsphinx-link",
    "pypandoc",
    "pytest_check_links",
    "recommonmark",
    "sphinx>=1.5",
    "sphinx_rtd_theme",
]
examples = []
test = [
    "nbval",
    "pytest-cov",
    "pytest>=6.0",
]

[project.urls]
Homepage = "https://github.com/QuantStack/ipyopenlayers"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build]
artifacts = [
    "ipyopenlayers/nbextension/index.*",
    "ipyopenlayers/labextension/*.tgz",
    "ipyopenlayers/labextension",
]

[tool.hatch.build.targets.wheel.shared-data]
"ipyopenlayers/nbextension" = "share/jupyter/nbextensions/ipyopenlayers"
"ipyopenlayers/labextension" = "share/jupyter/labextensions/ipyopenlayers"
"./install.json" = "share/jupyter/labextensions/ipyopenlayers/install.json"
"./ipyopenlayers.json" = "etc/jupyter/nbconfig/notebook.d/ipyopenlayers.json"

[tool.hatch.build.targets.sdist]
exclude = [
    ".github",
]

[tool.hatch.build.hooks.jupyter-builder]
build-function = "hatch_jupyter_builder.npm_builder"
ensured-targets = [
    "ipyopenlayers/nbextension/index.js",
    "ipyopenlayers/labextension/package.json",
]
skip-if-exists = [
    "ipyopenlayers/nbextension/index.js",
    "ipyopenlayers/labextension/package.json",
]
dependencies = [
    "hatch-jupyter-builder>=0.8.3",
]

[tool.hatch.build.hooks.jupyter-builder.build-kwargs]
path = "."
build_cmd = "build:prod"
npm = ["jlpm"]

[tool.tbump]
field = [
    { name = "channel", default = "" },
    { name = "release", default = "" },
]
file = [
    { src = "pyproject.toml", version_template = "version = \"{major}.{minor}.{patch}{channel}{release}\"" },
    { src = "ipyopenlayers/_version.py" },
]

[tool.tbump.version]
current = "0.2.1"
regex = "(?P<major>\\d+)\\.(?P<minor>\\d+)\\.(?P<patch>\\d+)((?P<channel>a|b|rc|.dev)(?P<release>\\d+))?"

[tool.tbump.git]
message_template = "Bump to {new_version}"
tag_template = "v{new_version}"

[tool.ruff.lint]
select = ["ALL"]

# Rules with violations that can't be autofixed:
ignore = [
   "A001",    # builtin-variable-shadowing
   "ANN001",  # missing-type-function-argument
   "ANN002",  # missing-type-args
   "ANN003",  # missing-type-kwargs
   "ANN201",  # missing-return-type-undocumented-public-function
   "ANN202",  # missing-return-type-private-function
   "ANN204",  # missing-return-type-special-method
   "ARG002",  # unused-method-argument
   "ARG005",  # unused-lambda-argument
   "D100",    # undocumented-public-module
   "D102",    # undocumented-public-method
   "D103",    # undocumented-public-function
   "D104",    # undocumented-public-package
   "D107",    # undocumented-public-init
   "D203",    # Require blank line before class docstring
   "D205",    # missing-blank-line-after-summary
   "D213",    # Require multi-line docstrings to start on the line after opening triple-quotes
   "D400",    # missing-trailing-period
   "D401",    # non-imperative-mood
   "D415",    # missing-terminal-punctuation
   "D417",    # undocumented-param
   "E402",    # module-import-not-at-top-of-file
   "E501",    # line-too-long
   "ERA001",  # commented-out-code
   "EXE001",  # shebang-not-executable
   "F401",    # unused-import
   "F403",    # undefined-local-with-import-star
   "F821",    # undefined-name
   "FBT002",  # boolean-default-value-positional-argument
   "FBT003",  # boolean-positional-value-in-call
   "G002",    # logging-percent-format
   "INP001",  # implicit-namespace-package
   "N816",    # mixed-case-variable-in-global-scope
   "PGH004",  # blanket-noqa
   "PLC0415", # import-outside-top-level
   "PLR2004", # magic-value-comparison
   "PTH110",  # os-path-exists
   "PTH118",  # os-path-join
   "PTH120",  # os-path-dirname
   "PTH123",  # builtin-open
   "RUF005",  # collection-literal-concatenation
   "S101",    # assert
   "S102",    # exec-builtin
   "SLF001",  # private-member-access
   "T201",    # print
   "TID252",  # relative-imports
   "UP008",   # super-call-with-parameters
   "UP031",   # printf-string-formatting
]

[tool.ruff.lint.per-file-ignores]
"*.ipynb" = [
    "E703",  # Forbid "useless" semicolons -- semicolons are meaningful in Jupyter Notebooks
]
